--- a/movie-search/src/scss/abstract/_constants.scss
+++ b/movie-search/src/scss/abstract/_constants.scss
@@ -2,3 +2,5 @@ $laptop-width: 1200px;
 $tablet-width: 768px;
 $mobile-big-width: 414px;
 $mobile-small-width: 320px;
+
+$color-main: rgb(175, 213, 228);
