--- a/movie-search/src/scss/abstract/_placeholders.scss
+++ b/movie-search/src/scss/abstract/_placeholders.scss
@@ -10,7 +10,7 @@
       box-shadow: inset 0 0 1px grey;
     }
     &::-webkit-scrollbar-thumb {
-      background: $color-violet;
+      background: black;
       border-radius: 10px;
     }
 }
