--- a/movie-search/src/scss/layouts/_footer.scss
+++ b/movie-search/src/scss/layouts/_footer.scss
@@ -1,1 +1,30 @@
+.footer {
+    background: $color-main;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+    padding: 15px 0 17px 0;
+}
 
+.footer__wrapper {
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer__quarter {
+    align-self: center;
+}
+
+.footer__github {
+    display: flex;
+    align-items: center;
+    a {
+        text-decoration: none;
+    }
+}
+
+.github_icon {
+    width: 34px;
+}
+
+.github_name {
+    padding: 0 10px;
+}
