--- a/movie-search/src/scss/layouts/_header.scss
+++ b/movie-search/src/scss/layouts/_header.scss
@@ -1,1 +1,9 @@
-
+.header {
+    background: $color-main;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+    padding: 15px 0 17px 0;
+    text-align: center;
+    h1 {
+        text-transform: uppercase;
+    }
+}
