feat: implement show movies

--- a/movie-search/src/scss/abstract/_constants.scss
+++ b/movie-search/src/scss/abstract/_constants.scss
@@ -3,4 +3,6 @@ $tablet-width: 768px;
 $mobile-big-width: 414px;
 $mobile-small-width: 320px;
 
+$main-width: 960px;
+
 $color-main: rgb(175, 213, 228);
