--- a/movie-search/src/scss/style.scss
+++ b/movie-search/src/scss/style.scss
@@ -2,11 +2,16 @@
 @import "./abstract/constants";
 @import "./abstract/mixins";
 @import "./abstract/placeholders";
+@import "./abstract/keyframes";
 
 // layouts
 @import "./layouts/wrapper";
 @import "./layouts/header";
 @import "./layouts/footer";
+
+// components
+@import "./components/search-block";
+@import "./components//movies-block";
 
 // bases
 @import "./base/base";
