--- a/movie-search/src/scss/components/_movies-block.scss
+++ b/movie-search/src/scss/components/_movies-block.scss
@@ -3,6 +3,7 @@
     position: relative;
     overflow: hidden;
     margin: 30px 0;
+    height: 446px;
 }
 
 .arrow-left,
@@ -44,6 +45,7 @@
     @extend %transition;
     border: 10px solid white;
     padding: 10px;
+    width: 240px;
 }
 
 .movie__title {
