feat: add no result message and correct work swipe

--- a/movie-search/src/scss/components/_search-block.scss
+++ b/movie-search/src/scss/components/_search-block.scss
@@ -21,7 +21,7 @@
     padding-left: 40px;
     @include font($size: larger, $weight: normal);
     background: url('../assets/img/search-icon.png');
-    background-size: 2%;
+    background-size: 23px;
     background-repeat: no-repeat;
     background-position: left;
     background-position-x: 6px;
