--- a/movie-search/src/scss/layouts/_wrapper.scss
+++ b/movie-search/src/scss/layouts/_wrapper.scss
@@ -1,4 +1,13 @@
 .wrapper {
-    max-width: $main-width;
+    max-width: 960px;
     margin: auto;
+    @include media-tablet() {
+        max-width: 720px;
+    }
+    @include media-mobiles-big() {
+        max-width: 480px;
+    }
+    @include media-mobiles-small() {
+        max-width: 240px;
+    }
 }
