--- a/movie-search/src/scss/base/_base.scss
+++ b/movie-search/src/scss/base/_base.scss
@@ -21,6 +21,17 @@ body {
     display: none;
 }
 
+.loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    align-self: center;
+    margin: auto;
+}
+
 .to-left {
     animation-duration: 2s;
     animation-name: left;
