--- a/movie-search/src/scss/components/_search-block.scss
+++ b/movie-search/src/scss/components/_search-block.scss
@@ -1,8 +1,23 @@
 .search-block {
     text-align: center;
     position: relative;
-    >* {
-        margin: 30px 0 20px;
+}
+
+.input-block {
+    display: flex;
+    padding: 10px;
+}
+
+.input-button {
+    padding: 10px;
+    background: $color-main;
+    border-radius: 0 10px 10px 0;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+    @include font($size: 1.8rem, $weight: bold);
+    border: 1px solid $color-main;
+    cursor: pointer;
+    &:hover {
+        border: 1px solid #c5bbbb;
     }
 }
 
@@ -26,9 +41,17 @@
     background-position: left;
     background-position-x: 6px;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
-    border: 10px solid white;
+    border: 1px solid #c5bbbb;
+    border-radius: 10px 0 0 10px;
+    border-right: 0;
 }
 
 .not-finded {
-    color: darkred;
+    color: darkslategray;
+    padding: 0 10px;
+}
+
+.notification {
+    height: 42px;
+    padding: 0 10px;
 }
