--- a/movie-search/src/scss/components/_movies-block.scss
+++ b/movie-search/src/scss/components/_movies-block.scss
@@ -2,7 +2,6 @@
     display: flex;
     position: relative;
     overflow: hidden;
-    margin: 30px 0;
     height: 446px;
 }
 
@@ -14,6 +13,9 @@
     width: 20px;
     height: 30px;
     cursor: pointer;
+    &:hover {
+        animation: 0.5s infinite alternate opacity;
+    }
 }
 
 .arrow-left {
@@ -49,6 +51,7 @@
 }
 
 .movie__title {
+    padding-bottom: 10px;
     @include font($size: unset, $weight: bold);
 }
 
