--- a/movie-search/src/scss/components/_keyboard.scss
+++ b/movie-search/src/scss/components/_keyboard.scss
@@ -3,6 +3,7 @@
     border: 1px solid #c5bbbb;
     border-right: 0;
     border-left: 0;
+    padding: 1px 2px;
     cursor: pointer;
 }
 
@@ -73,4 +74,16 @@
     span {
         padding: 0 2.8vw;
     }
+}
+
+.Win {
+    background: url('../assets/img/lang.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 0 2.8vw;
+}
+
+.active-capslock {
+    color: blue;
 }
