--- a/movie-search/src/scss/components/_keyboard.scss
+++ b/movie-search/src/scss/components/_keyboard.scss
@@ -5,6 +5,9 @@
     border-left: 0;
     padding: 1px 2px;
     cursor: pointer;
+    &:hover {
+        background: $color-main;
+    }
 }
 
 .keyboard-wrapper {
@@ -86,4 +89,10 @@
 
 .active-capslock {
     color: blue;
+}
+
+.keyboard-code-active {
+    background-color: $color-main;
+    border: 1px solid #064642;
+    border-radius: 0.8vw;
 }
