--- a/movie-search/src/scss/components/_search-block.scss
+++ b/movie-search/src/scss/components/_search-block.scss
@@ -42,6 +42,8 @@
     background-position-x: 6px;
     border: 1px solid #c5bbbb;
     border-right: 0;
+    position: relative;
+    z-index: 10;
 }
 
 .not-finded {
