feat: add more details about movie

--- a/movie-search/src/scss/style.scss
+++ b/movie-search/src/scss/style.scss
@@ -13,6 +13,7 @@
 // components
 @import "./components/search-block";
 @import "./components//movies-block";
+@import "./components/movie-details";
 @import "./components/keyboard";
 
 // bases
