--- a/movie-search/src/scss/components/_keyboard.scss
+++ b/movie-search/src/scss/components/_keyboard.scss
@@ -8,6 +8,14 @@
     &:hover {
         background: $color-main;
     }
+    @include media-mobiles-small() {
+        position: fixed;
+        height: 30px;
+        right: 0;
+        top: 0;
+        border: 1px solid #c5bbbb;
+        z-index: 15;
+    }
 }
 
 .keyboard-wrapper {
@@ -80,11 +88,18 @@
 }
 
 .Win {
-    background: url('../assets/img/lang.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
     padding: 0 2.8vw;
+}
+
+.MetaLeft {
+    position: relative;
+}
+
+.lang-earth {
+    height: 3vw;
+    position: absolute;
+    left: 1.3vw;
+    top: 0.1vw;
 }
 
 .active-capslock {
