--- a/movie-search/src/scss/components/_movies-block.scss
+++ b/movie-search/src/scss/components/_movies-block.scss
@@ -89,3 +89,13 @@
     background: url('../assets/img/star.png');
     background-size: cover;
 }
+
+.more-button {
+    cursor: pointer;
+    color: darkslategray;
+    font-family: monospace, sans-serif;
+    @include font($size: 1.6rem, $weight: bold);
+    &:hover {
+        opacity: .9;
+    }
+}
