--- a/movie-search/src/scss/components/_search-block.scss
+++ b/movie-search/src/scss/components/_search-block.scss
@@ -1,6 +1,16 @@
 .search-block {
     text-align: center;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    @extend %custom-scroll;
+    @include media-mobiles-big() {
+        display: inline;
+    }
+    @include media-mobiles-small() {
+        display: inline;
+    }
 }
 
 .input-block {
@@ -18,6 +28,22 @@
     &:hover {
         background: $color-main;
         border: 2px solid $color-main;
+    }
+}
+
+.input-voice {
+    width: 30px;
+    background: url('../assets/img/voice-mirco.png');
+    background-size: 20px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: 1px solid #c5bbbb;
+    border-right: 0;
+    border-left: 0;
+    cursor: pointer;
+    opacity: .8;
+    &:hover {
+        opacity: 1;
     }
 }
 
@@ -47,11 +73,11 @@
 }
 
 .not-finded {
-    color: darkslategray;
     padding: 0 10px;
 }
 
-.notification {
-    height: 42px;
+.notification,
+.error {
     padding: 0 10px;
+    overflow: auto;
 }
