--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -36,24 +36,24 @@ body {
 }
 
 .to-left {
-    animation-duration: 2s;
+    animation-duration: .5s;
     animation-name: left;
 }
 
 .to-right {
-    animation-duration: 2s;
+    animation-duration: .5s;
     animation-name: right;
     animation-direction: reverse;
 }
 
 .from-left {
-    animation-duration: 2s;
+    animation-duration: .5s;
     animation-name: left;
     animation-direction: reverse;
 }
 
 .from-right {
-    animation-duration: 2s;
+    animation-duration: .5s;
     animation-name: right;
 
 }
