fix: change functionality arrows and sticky footer

--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     background: $color-main;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
-    padding: 15px 0 17px 0;
+    height: 70px;
 }
 
 .footer__wrapper {
