--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -1,8 +1,10 @@
 .header {
     background: $color-main;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
-    padding: 15px 0 17px 0;
-    text-align: center;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     h1 {
         text-transform: uppercase;
     }
